fix(cors): CorsFilter no servlet antes do Security + headers explicitos
Garante preflight OPTIONS com Authorization e credenciais; desativa cors duplicado no HttpSecurity.

Made-with: Cursor